# video_search_tool

./: .gitignore  chains.py  core_llms.py  dataset_creator.py  delete.py  env_sample  hint_mode_history_default_session.json  main.py  pyproject.toml  requirements.txt  search.py  test_jax.ipynb  trasncription.py  util.py  vector_db.py  whisper_x_test.ipynb
scripts/: add_motivation.py  migrate_orphan_messages.py  populate_courses_redis.py
server/: app.py  config.py  main.py
server/brain/: agents.py  chains.py  core_llms.py  image_questions.py  prompts.py  tools.py  transcription.py  vector_db.py
server/data_stores/: pdf_data.py
server/models/: conversation.py  images.py  motivation.py  qa_explanation.py  user.py
server/routes/: conversation.py  doubt_clearance.py  files.py
server/services/: redis.py  redis_cache.py
server/tools/: __init__.py  base_tool.py  question_generator.py  video_search.py
server/utils/: audio_processing.py  current_conversation.py  current_user.py  explaination_utils.py  gemini_utils.py  image_processing.py  memory_utils.py  util.py
